recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:3: error: '(' expected but identifier found.
  if spiral(0, 90, 12, 3){return 0};
     ^Spiral:9: error: illegal start of simple expression
} 
^