recursion.logo.spiral.Spiral.scala.code
def spiral(steps:Int, angle:Int, length:Int, increment:Int)    {
  
  if spiral(0, 90, 12, 3){return 0};
  
  else {avance(length);
       gauche(angle);
				return spiral (steps -1, angle, length +3 , increment);
       }
}